Opened 12 years ago
Closed 8 years ago
#5906 closed bug (fixed)
BDragger drawing problems
Reported by: | X512 | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #10356, #11335 | |
Platform: | All |
Description
In some replicants BDragger drawing on top of replicant(this is OK), but on other replicants BDragger blocks redrawing of replicant. Transparent part of BDragger don't draw corectly.
Attachments (3)
Change History (15)
by , 12 years ago
Attachment: | replicantIconBug.png added |
---|
by , 9 years ago
Attachment: | 0001-Draw-dragger-instead-of-using-predeffined-bitmap-dat.patch added |
---|
comment:1 by , 9 years ago
patch: | 0 → 1 |
---|
comment:4 by , 9 years ago
patch: | 1 → 0 |
---|
comment:5 by , 9 years ago
Does any other replicant besides the Workspaces replicant show this behavior? It may be due to the weird nature of the workspace view, which is drawn inside the app_server.
comment:6 by , 9 years ago
I found the similar problem on all replicant what I put to the Desktop. For example the ActivityMonitor's graphs are wrong too. And if we move any window over it, the transparent color will be the same as the window's color what we moved.
comment:7 by , 9 years ago
Actual problem is such fact that app_server don't support transparent BView's. If we try to set B_TRANSPARENT_COLOR flag it just disables background drawing and doesn't actually make BView transparent. This and other problems like #6246 should be fixed to keep app_server up-to-date. I don't think that it is so hard.
by , 9 years ago
Attachment: | handler.png added |
---|
comment:8 by , 9 years ago
comment:9 by , 8 years ago
Blocking: | 10356 added |
---|
comment:12 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Right replicant draws wrong