src/kits/interface/Dragger.cpp
@@ -254,6 +254,8 @@ BDragger::Draw(BRect update)
 		if (Parent() != NULL && (Parent()->Flags() & B_DRAW_ON_CHILDREN) == 0) {
 			uint32 flags = Parent()->Flags();
 			Parent()->SetFlags(flags | B_DRAW_ON_CHILDREN);
+			SetHighColor(Parent()->ViewColor());
+			FillRect(Bounds());
 			Parent()->Draw(Frame() & ConvertToParent(update));
 			Parent()->Flush();
 			Parent()->SetFlags(flags);
